Search Box using promise

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,5 @@
   <a routerLink="/heroes" routerLinkActive="active">Heroes</a>
 </nav>
 <div style="margin-top:15px">Welcome To Heroes Application </div>
-
+<hero-search></hero-search>
 <router-outlet></router-outlet>
