Search by using observable

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,5 @@
 </nav>
 <div style="margin-top:15px">Welcome To Heroes Application </div>
 <hero-search></hero-search>
+<hero-ob-search></hero-ob-search>
 <router-outlet></router-outlet>
